TG-458 fix(must-change-password): remove text-align style

--- a/css/utils/_modal.scss
+++ b/css/utils/_modal.scss
@@ -182,7 +182,6 @@ clr-modal .modal-form-body {
         color: #cccccc
     }
     input[type=text] {
-        text-align: center;
         border: 1px solid #96c8f1;
         margin: 10px 0 0 0;
         width: 100%;
